# energy_damand_prediction

./: .gitignore  .zshrc  Makefile  README.md  Time_Series_Modeling_Tutorial_WIDS_2024.ipynb  pyproject.toml
.github/workflows/: feature_pipeline.yml  inference_pipeline.yml  training_pipeline.yml
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb
notebooks/.ipynb_checkpoints/: 11_backfill_feature_store-checkpoint.ipynb  12_feature_pipeline-checkpoint.ipynb
scripts/: backfill_inference.py  feature_pipeline.py  inference_pipeline.py  training_pipeline.py
src/: config.py  discord.py  feature_store_api.py  frontend.py  frontend_monitoring.py  inference.py  monitoring.py
